fix: update CORS config to allow Vercel domains in production