@@ -1,24 +1,42 @@
 package com.eventplanner.config;
 
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 @Configuration
 public class WebCorsConfig {
 
+    @Value("${cors.allowed-origins:}")
+    private String corsAllowedOrigins;
+
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration config = new CorsConfiguration();
-        // Allow local dev origins (any localhost/127.0.0.1 port)
-        config.setAllowedOriginPatterns(List.of(
+        
+        // Build allowed origin patterns
+        List<String> patterns = new ArrayList<>(Arrays.asList(
                 "http://localhost:*",
-                "http://127.0.0.1:*"
+                "http://127.0.0.1:*",
+                "https://*.vercel.app"
         ));
+        
+        // Add configured origins from environment
+        if (corsAllowedOrigins != null && !corsAllowedOrigins.isEmpty()) {
+            Arrays.stream(corsAllowedOrigins.split(","))
+                  .map(String::trim)
+                  .filter(s -> !s.isEmpty())
+                  .forEach(patterns::add);
+        }
+        
+        config.setAllowedOriginPatterns(patterns);
         // Allow credentials for cookie/session-based flows if needed
         config.setAllowCredentials(true);
         // Allow all standard methods and headers for dev convenience
